--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<button (click)="add()">Click!</button>
-<button (click)="delete()">Delete!</button>
+<!--<app-login class="d-flex justify-content-center"></app-login>-->
+<app-main></app-main>
