--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,58 @@
-<nav class="navbar navbar-dark bg-primary">
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
+  <div class="ms-2">
+    <a  class="navbar-brand" style="color: white;">Employee Manager</a>
+    <button class="btn btn-primary" type="button">Add Employee </button>
+  </div>
+  <div class="m-1">
+    <form class="form-check-inline my-2 my-lg-0">
+      <input type="search" class="form-control" placeholder="Search employees...">
+    </form>
+  </div>
 </nav>
+
+<div class="mt-2">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <div class="container">
+    <div class="d-flex flex-wrap" >
+      <div *ngFor="let data of employees">
+        <!-- *ngFor here -->
+
+        <div class="col-xl-10 mt-2">
+          <div class="card m-b-30">
+            <div class="card-body row">
+
+              <div class="col-6">
+                <a href=""><img src="{{data?.imageUrl}}" alt="" class="img-fluid rounded-circle w-60"></a>
+              </div>
+
+
+              <div class="col-6 card-title align-self-center mb-0">
+                <h5>{{data?.name}}</h5>
+                <p class="m-0">{{data?.jobTitle}}</p>
+              </div>
+
+            </div>
+
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><i class="fa fa-envelope float-right"></i>Email : <a href="#">{{data?.email}}</a></li>
+              <li class="list-group-item"><i class="fa fa-phone float-right"></i>Phone : {{data?.phone}}</li>
+            </ul>
+
+            <div class="card-body">
+
+              <div class="float-right btn-group btn-group-sm">
+                <a href="#" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
+                <a href="#" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</div>
+
