--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,1 @@
-<div style="margin: 8%; padding: 8%" class="flex-wrap">
-  <div class="card mt-5" style="width: 25rem; height: 25rem;" >
-    <i class="fas fa-user-alt fa-3x text-info"></i>
-    <div class="card-header d-flex justify-content-center">
-      <h1 class="display-1">Log In</h1>
-    </div>
-    <div class="card-body d-flex justify-content-center align-content-center" >
-      <div style="width: 20rem" class="mt-5">
-        <div class="input-group mb-2">
-          <input type="text" class="form-control" placeholder="Username">
-        </div>
-        <div class="input-group mb-2">
-          <input type="text" class="form-control" placeholder="Password">
-        </div>
-        <div class="d-flex justify-content-center">
-          <button class="btn btn-primary m-2">Login</button>
-          <button class="btn btn-danger m-2">Reset</button>
-        </div>
-      </div>
-    </div>
-    <div class="card-footer d-flex justify-content-center" >
-      <button class="btn btn-danger">Create Account</button>
-    </div>
-  </div>
-
-</div>
+<h1>Hello</h1>
