--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
   <div class="ms-2">
     <a  class="navbar-brand" style="color: white;">Employee Manager</a>
-    <button class="btn btn-primary" type="button">Add Employee </button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Add Employee </button>
   </div>
   <div class="m-1">
     <form class="form-check-inline my-2 my-lg-0">
@@ -9,6 +9,32 @@
     </form>
   </div>
 </nav>
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addEmployee" (click)="onOpenModal(null,'add')">
+  Launch static backdrop modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="addEmployee" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h1>Hello world</h1>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Understood</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="mt-2">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -52,6 +78,16 @@
 
       </div>
     </div>
+  </div>
+</div>
+<div class="col-lg-12 col-md-12 col-xl-12" *ngIf="employees.length === 0">
+  <div class="alert alert-info" role="alert">
+    <h4 class="alert-heading">
+      No EMPLOYEES!
+    </h4>
+    <p>
+      No Employees were found on the database. Please add Employees.
+    </p>
   </div>
 
 </div>
