--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,16 +12,30 @@
 
 <ng-template  #addEmployee let-c="open" let-d="dismiss">
   <div class="modal-header">
-    <h3 class="mt-3">Employee Manager</h3>
+    <h1 class="mt-3">Add Employee to Database</h1>
     <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross Click')"></button>
   </div>
   <div class="modal-body">
-    <h1>Add Employee to Database</h1>
-    <input type="text" class="form-control mb-2" placeholder="Name" aria-label="name" >
-    <input type="text" class="form-control mb-2" placeholder="Email" aria-label="email" >
-    <input type="text" class="form-control mb-2" placeholder="Job Title" aria-label="jobTitle">
-    <input type="text" class="form-control mb-2" placeholder="Phone" aria-label="phone" >
-    <input type="text" class="form-control mb-2" placeholder="code" aria-label="code" >
+    <div class="card">
+      <div class="card-header">
+        <h4 class="mt-2">Select your profile photo</h4>
+      </div>
+      <div class="card-body d-flex justify-content-between">
+        <button class="btn btn-primary"><</button>
+        <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="img-fluid rounded-circle w-60" width="100" height="240">
+        <button class="btn btn-dark"> > </button>
+      </div>
+<!--      <div class="card-footer d-flex justify-content-between">-->
+
+<!--      </div>-->
+    </div>
+    <div class="mt-2">
+      <input type="text" class="form-control mb-2" placeholder="Name" aria-label="name" >
+      <input type="text" class="form-control mb-2" placeholder="Email" aria-label="email" >
+      <input type="text" class="form-control mb-2" placeholder="Job Title" aria-label="jobTitle">
+      <input type="text" class="form-control mb-2" placeholder="Phone" aria-label="phone" >
+      <input type="text" class="form-control mb-2" placeholder="code" aria-label="code" >
+    </div>
 
     <!--    <form>-->
 <!--      <div class="mb-3">-->
