--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -21,9 +21,8 @@
         <h4 class="mt-2">Select your profile photo</h4>
       </div>
       <div class="card-body d-flex justify-content-between">
-        <button class="btn btn-primary"><</button>
-        <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="img-fluid rounded-circle w-60" width="100" height="240">
-        <button class="btn btn-dark"> > </button>
+        <img src="{{currentImage}}" class="img-fluid rounded-circle w-60" width="100" height="240">
+        <button class="btn btn-dark" (click)="onClickRight()"> > </button>
       </div>
 <!--      <div class="card-footer d-flex justify-content-between">-->
 
