--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -24,43 +24,33 @@
         <img src="{{currentImage}}" class="img-fluid rounded-circle w-60" width="100" height="240">
         <button class="btn btn-dark" (click)="onClickRight()"> > </button>
       </div>
-<!--      <div class="card-footer d-flex justify-content-between">-->
-
-<!--      </div>-->
     </div>
     <div class="mt-2">
-      <input type="text" class="form-control mb-2" placeholder="Name" aria-label="name" >
-      <input type="text" class="form-control mb-2" placeholder="Email" aria-label="email" >
-      <input type="text" class="form-control mb-2" placeholder="Job Title" aria-label="jobTitle">
-      <input type="text" class="form-control mb-2" placeholder="Phone" aria-label="phone" >
-      <input type="text" class="form-control mb-2" placeholder="code" aria-label="code" >
+      <input type="text" class="form-control mb-2" placeholder="Name" aria-label="name" [(ngModel)]="addEmployeeData.name">
+      <input type="text" class="form-control mb-2" placeholder="Email" aria-label="email" [(ngModel)]="addEmployeeData.email">
+      <input type="text" class="form-control mb-2" placeholder="Job Title" aria-label="jobTitle" [(ngModel)]="addEmployeeData.jobTitle">
+      <input type="number" class="form-control mb-2" placeholder="Phone" aria-label="phone" [(ngModel)]="addEmployeeData.phone">
+      <input type="number" class="form-control mb-2" placeholder="code" aria-label="code" [(ngModel)]="addEmployeeData.code">
     </div>
-
-    <!--    <form>-->
-<!--      <div class="mb-3">-->
-<!--        <label class="form-label">-->
-<!--          Email Address-->
-<!--        </label>-->
-<!--        <input type="email" class="form-control">-->
-<!--      </div>-->
-<!--      <div class="mb-3">-->
-<!--        <label class="form-label">-->
-<!--          Password-->
-<!--        </label>-->
-<!--        <input type="password" class="form-control">-->
-<!--      </div>-->
-<!--      <div class="mb-3">-->
-<!--        <label class="form-label">-->
-<!--          Name-->
-<!--        </label>-->
-<!--        <input type="text" class="form-control">-->
-<!--      </div>-->
-<!--    </form>-->
+  </div>
+  <div class="modal-footer" *ngIf="footerDisplay">
+    <h4>{{error}}</h4>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary">Add</button>
+    <button class="btn btn-primary" (click)="addEmployeeFunction();d('Cross Click')">Add</button>
     <button class="btn btn-danger" (click)="d('Cross Click')">Cancel</button>
   </div>
+</ng-template>
+<ng-template #deleteEmployee let-c="open" let-d="dismiss">
+  <div class="modal-header">
+    <h1 class="mt-3">Delete Employee</h1>
+    <button class="btn-close" aria-label="Close" (click)="d()"></button>
+  </div>
+  <div class="modal-body">
+    <h5>Are you sure you want to delete employee?</h5>
+  </div>
+</ng-template>
+<ng-template #updateEmployee let-c="open" let-d="dismiss">
 
 </ng-template>
 
@@ -96,8 +86,8 @@
             <div class="card-body">
 
               <div class="float-right btn-group btn-group-sm">
-                <a href="#" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
-                <a href="#" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
+                <a href="#" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit" (click)="open(updateEmployee)"><i class="fa fa-pencil"></i> </a>
+                <a href="#" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete" (click)="open(deleteEmployee)"><i class="fa fa-times"></i></a>
               </div>
 
             </div>
