--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -47,7 +47,13 @@
     <button class="btn-close" aria-label="Close" (click)="d()"></button>
   </div>
   <div class="modal-body">
-    <h5>Are you sure you want to delete employee?</h5>
+    <div>
+      <h3>Are you sure you want to delete employee {{deleteEmployeeData.name}}?</h3>
+    </div>
+    <div class="d-flex justify-content-end">
+      <button class="btn btn-dark m-2" (click)="d()">No</button>
+      <button class="btn btn-danger m-2" (click)="deleteEmployeeFunction(); d()">Yes</button>
+    </div>
   </div>
 </ng-template>
 <ng-template #updateEmployee let-c="open" let-d="dismiss">
@@ -59,7 +65,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <div class="container">
     <div class="d-flex flex-wrap" >
-      <div *ngFor="let data of employees">
+      <div *ngFor="let data of employees; let i = index">
         <!-- *ngFor here -->
 
         <div class="col-xl-10 mt-2">
@@ -87,7 +93,7 @@
 
               <div class="float-right btn-group btn-group-sm">
                 <a href="#" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit" (click)="open(updateEmployee)"><i class="fa fa-pencil"></i> </a>
-                <a href="#" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete" (click)="open(deleteEmployee)"><i class="fa fa-times"></i></a>
+                <a href="#" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete" (click)="open(deleteEmployee, i)"><i class="fa fa-times"></i></a>
               </div>
 
             </div>
