--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -57,6 +57,13 @@
   </div>
 </ng-template>
 <ng-template #updateEmployee let-c="open" let-d="dismiss">
+  <div class="modal-header">
+    <h1 class="mt-3">Edit Employee</h1>
+    <button type="button" class="btn-close" aria-label="Close" (click)="d()"></button>
+  </div>
+  <div class="modal-body">
+
+  </div>
 
 </ng-template>
 
