--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -62,7 +62,48 @@
     <button type="button" class="btn-close" aria-label="Close" (click)="d()"></button>
   </div>
   <div class="modal-body">
+    <div class="card" *ngIf="!change">
+      <div class="card-header">
+        <h4 class="mt-2">Select your profile photo</h4>
+      </div>
+      <div class="card-body d-flex justify-content-center">
+        <img src="{{deleteEmployeeData.imageUrl}}" class="img-fluid rounded-circle w-60" width="100" height="240">
+      </div>
+      <div class="card-footer d-flex justify-content-center">
+        <button class="btn btn-danger" (click)="change = true">Change</button>
+      </div>
+    </div>
 
+    <div class="card" *ngIf="change">
+        <div class="card-header">
+          <h4 class="mt-2">Select your profile photo</h4>
+        </div>
+        <div class="card-body d-flex justify-content-between">
+          <img src="{{currentImage}}" class="img-fluid rounded-circle w-60" width="100" height="240">
+          <button class="btn btn-dark" (click)="onClickRight()"> > </button>
+        </div>
+        <div class="card-footer d-flex justify-content-center">
+          <button class="btn btn-primary" (click)="onSaveProfile()">Save</button>
+        </div>
+      </div>
+
+
+    <div class="m-2">
+      <label class="form-label">Name: </label>
+      <input type="text" class="form-control mb-2" placeholder="Name" aria-label="name" [(ngModel)]="deleteEmployeeData.name">
+      <label class="form-label">Email: </label>
+      <input type="text" class="form-control mb-2" placeholder="Email" aria-label="email" [(ngModel)]="deleteEmployeeData.email">
+      <label class="form-label">Job Tile: </label>
+      <input type="text" class="form-control mb-2" placeholder="Job Title" aria-label="jobTitle" [(ngModel)]="deleteEmployeeData.jobTitle">
+      <label class="form-label">Phone: </label>
+      <input type="number" class="form-control mb-2" placeholder="Phone" aria-label="phone" [(ngModel)]="deleteEmployeeData.phone">
+      <label class="form-label">Code: </label>
+      <input type="number" class="form-control mb-2" placeholder="code" aria-label="code" [(ngModel)]="deleteEmployeeData.code">
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-primary" (click)="d(); updateEmployeeFunction()">Save</button>
+    <button class="btn btn-danger" (click)="d()">Cancel</button>
   </div>
 
 </ng-template>
@@ -74,40 +115,30 @@
     <div class="d-flex flex-wrap" >
       <div *ngFor="let data of employees; let i = index">
         <!-- *ngFor here -->
-
-        <div class="col-xl-10 mt-2">
-          <div class="card m-b-30">
+        <div class="col-xl-10 mt-2 p-2" >
+          <div class="card m-1" style="width: 18rem; height: 19rem">
             <div class="card-body row">
 
               <div class="col-6">
                 <a href=""><img src="{{data?.imageUrl}}" alt="" class="img-fluid rounded-circle w-60"></a>
               </div>
-
-
               <div class="col-6 card-title align-self-center mb-0">
-                <h5>{{data?.name}}</h5>
+                <h2>{{data?.name}}</h2>
                 <p class="m-0">{{data?.jobTitle}}</p>
               </div>
-
             </div>
-
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><i class="fa fa-envelope float-right"></i>Email : <a href="#">{{data?.email}}</a></li>
+              <li class="list-group-item"><i class="fa fa-envelope float-right" ></i>Email : <a href="#">{{data?.email}}</a></li>
               <li class="list-group-item"><i class="fa fa-phone float-right"></i>Phone : {{data?.phone}}</li>
             </ul>
-
-            <div class="card-body">
-
-              <div class="float-right btn-group btn-group-sm">
-                <a href="#" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit" (click)="open(updateEmployee)"><i class="fa fa-pencil"></i> </a>
+            <div class="card-body d-flex justify-content-end">
+              <div class="float-right btn-group btn-group-sm" style="height: 2rem">
+                <a href="#" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit" (click)="open(updateEmployee, i)"><i class="fa fa-pencil"></i> </a>
                 <a href="#" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete" (click)="open(deleteEmployee, i)"><i class="fa fa-times"></i></a>
               </div>
-
             </div>
           </div>
-
         </div>
-
       </div>
     </div>
   </div>
