working on search input right now.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--<app-login class="d-flex justify-content-center"></app-login>-->
-<app-main></app-main>
+<!--<app-main></app-main>-->
 
-<!--<app-login></app-login>-->
+<app-login></app-login>
